SC-145-purchase cont updated
